fix: Ajusta a posição e o tamanho do botão flutuante do menu para melhor visibilidade e usabilidade.

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -243,8 +243,8 @@ nav a.active::after {
   .menu-float-button {
     display: flex;
     position: fixed;
-    bottom: 80px;
-    left: 20px;
+    bottom: 15px;
+    left: 15px;
     width: 50px;
     height: 50px;
     border-radius: 50%;
@@ -262,7 +262,7 @@ nav a.active::after {
 
   .menu-float-button img {
     width: 30px;
-    height: 30px;
+    height: 40px;
     transition: transform 0.3s ease;
   }
 
@@ -271,7 +271,7 @@ nav a.active::after {
   }
 
   .menu-float-button.active img {
-    transform: rotate(45deg);
+    transform: rotate(90deg);
   }
 
   body.menu-open {
@@ -376,6 +376,6 @@ nav a.active::after {
 
   .menu-float-button img {
     width: 25px;
-    height: 25px;
+    height: 30px;
   }
-} 
+}
